# Robot3DDataExtraction

./: .gitignore  CMakeLists.txt  DHParameterCalculator.cpp  DHParameterCalculator.h  ER6-1600.vcmx  ImageConverter.cpp  ImageConverter.h  README.md  RobotConfigParser.cpp  RscToJsonParser.cpp  RscToJsonParser.h  ZipExtractor.cpp  ZipExtractor.h  compileFile  dataExtractor  dataExtractor.cpp  dataProcessing.cpp  jsonParser.cpp  main.cpp  parser  parser.cpp  parser.h
3DModelData/ER6-1600/: estun_logo.mtl  geometry_11.mtl
3DModelData/IRB 390-10_1300/: geo-c0df4d11-0f68-47e8-b053-fb1520c04126.mtl
3DModelData/IRB 760/: irb760_450_318_link_v_cad_00_body1.mtl
3DModelData/KR 180 R3200-2 PA/: a3.mtl  a3_es15_r3200_quantec-2_pa_v00.mtl  a5.mtl  lift_tools_1.mtl
3DModelData/KR 80L/: a2_cut_0__8_1_1_1.mtl  d21309617_001_5__4_1.mtl  d21309621_000_8__1_2.mtl  fuehrung_re.mtl
3DModelData/LBR iisy 15 R930/: geo-05cb664e-b5a3-4aca-ba10-e191c1ee1874.mtl  geo-20d364c3-d557-4fd2-a061-749bd83a710a.mtl  geo-8d304518-f22e-4d2a-a5a4-4c111627400f.mtl  geo-9b8ffaa2-6a01-4073-a946-d9f6901b772c.mtl
3DModelData/QRC-290/: transform_4.mtl
3DModelData/QRC-350-E/: geo3.mtl  geo6.mtl  wirefeeder.mtl
3DModelData/Zu 3/: zu_3_04__6.mtl
data/: envelopeprofile  geometry_10  geometry_11  geometry_12  geometry_13  geometry_14  geometry_5  geometry_7  model.xml  profile
jsonDir/: component.json  dhParameters.json
output/: dhParameters.json  newClasscomponent.json
unzipDir/ER6-1600/: component_icon_preview.tga  estun_logo.3ds  geometry_0.3ds  geometry_1.3ds  (+6 more)
vcmxDir/: ER6-1600.vcmx
(+218 files in other folders)
